--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=grp6m5lz95d9exiz.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=gemmapartners
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=hqcj4trd63adjp08
+DB_USERNAME=rqzwhxd8lbdp6f1r
+DB_PASSWORD=jpbheair6x538wbb
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
