--- a/.env
+++ b/.env
@@ -14,6 +14,13 @@ DB_DATABASE=hqcj4trd63adjp08
 DB_USERNAME=rqzwhxd8lbdp6f1r
 DB_PASSWORD=jpbheair6x538wbb
 
+#DB_CONNECTION=mysql
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=gemmapartners
+#DB_USERNAME=root
+#DB_PASSWORD=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
